product -> cwt terminal complete

--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 namespace: contact
-permalink: /hubungi
-permalink_en: /contact
+permalink: /hubungi.html
+permalink_en: /contact.html
 ---
 
 <h3>Map</h3>
