--- a/service.html
+++ b/service.html
@@ -2,8 +2,8 @@
 layout: page
 title: Perkhidmatan
 namespace: perkhidmatan
-permalink: /perkhidmatan
-permalink_en: /what_we_offer
+permalink: /perkhidmatan.html
+permalink_en: /what_we_offer.html
 ---
 
 {% tf service.md %}
