--- a/product/smartphone-app.html
+++ b/product/smartphone-app.html
@@ -11,6 +11,6 @@ permalink_en: /product/jomparking.html
     {% tf product/smartphone-app.md %}
   </div>
   <div class="col m6">
-    <img src="/assets/images/product/cwt.png" alt="" class="responsive-img">
+    <img src="/assets/images/product/jomparking.jpg" alt="Jom Parking!" class="responsive-img">
   </div>
 </div>
