--- a/operation/terminal-ops.html
+++ b/operation/terminal-ops.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Perkhidmatan
-namespace: cwt_terminal
-permalink: /produk/cale-cwt-terminal.html
-permalink_en: /product/cale-cwt-terminal.html
+title: Operasi
+namespace: terminal_ops
+permalink: /operasi-terminal.html
+permalink_en: /terminal-operation.html
 ---
 
 <div class="row">
@@ -11,6 +11,6 @@ permalink_en: /product/cale-cwt-terminal.html
     <img src="/assets/images/product/cwt.png" alt="" class="responsive-img">
   </div>
   <div class="col m9">
-    {% tf product/cwt-terminal.md %}
+    {% tf operation/terminal-ops.md %}
   </div>
 </div>
