--- a/operation/compound.html
+++ b/operation/compound.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Perkhidmatan
-namespace: cwt_terminal
-permalink: /produk/cale-cwt-terminal.html
-permalink_en: /product/cale-cwt-terminal.html
+title: Operasi
+namespace: season_pass
+permalink: /operasi/pas-bulanan-digital.html
+permalink_en: /operation/digital-season-pass.html
 ---
 
 <div class="row">
@@ -11,6 +11,6 @@ permalink_en: /product/cale-cwt-terminal.html
     <img src="/assets/images/product/cwt.png" alt="" class="responsive-img">
   </div>
   <div class="col m9">
-    {% tf product/cwt-terminal.md %}
+    {% tf operation/season-pass.md %}
   </div>
 </div>
