add rate page, season pass, reserve bay

--- a/operation/terminal-ops.html
+++ b/operation/terminal-ops.html
@@ -7,10 +7,12 @@ permalink_en: /terminal-operation.html
 ---
 
 <div class="row">
-  <div class="col m3">
-    <img src="/assets/images/product/cwt.png" alt="" class="responsive-img">
+  <div class="col m4">
+    <h5>{% t menu.operations.map %}</h5>
+    <img src="/assets/images/operation/operation_map.jpg" alt="" class="responsive-img">
+    {% tf operation/zone.md %}
   </div>
-  <div class="col m9">
+  <div class="col m8">
     {% tf operation/terminal-ops.md %}
   </div>
 </div>
