--- a/operation/reserve-bay.html
+++ b/operation/reserve-bay.html
@@ -1,16 +1,18 @@
 ---
 layout: page
 title: Operasi
-namespace: compound
-permalink: /operasi/maklumat-kompaun.html
-permalink_en: /operation/compound-info.html
+namespace: operation_reserve_bay
+permalink: /operasi/petak-khas.html
+permalink_en: /operation/reserve-bay.html
 ---
 
 <div class="row">
-  <div class="col m3">
-    <img src="/assets/images/product/cwt.png" alt="" class="responsive-img">
+  <div class="col m4">
+    <h5>{% t menu.operations.map %}</h5>
+    <img src="/assets/images/operation/operation_map.jpg" alt="" class="responsive-img">
+    {% tf operation/zone.md %}
   </div>
-  <div class="col m9">
-    {% tf operation/compound.md %}
+  <div class="col m8">
+    {% tf operation/reserve-bay.md %}
   </div>
 </div>
