--- a/operation/season-pass.html
+++ b/operation/season-pass.html
@@ -1,16 +1,18 @@
 ---
 layout: page
 title: Operasi
-namespace: season_pass
+namespace: operation_season_pass
 permalink: /operasi/pas-bulanan-digital.html
 permalink_en: /operation/digital-season-pass.html
 ---
 
 <div class="row">
-  <div class="col m3">
-    <img src="/assets/images/product/cwt.png" alt="" class="responsive-img">
+  <div class="col m4">
+    <h5>{% t menu.operations.map %}</h5>
+    <img src="/assets/images/operation/operation_map.jpg" alt="" class="responsive-img">
+    {% tf operation/zone.md %}
   </div>
-  <div class="col m9">
+  <div class="col m8">
     {% tf operation/season-pass.md %}
   </div>
 </div>
