fix rate, spelling, footer languange, embed map

--- a/product/reserve-bay.html
+++ b/product/reserve-bay.html
@@ -20,7 +20,7 @@ permalink_en: /product/reserve-bay.html
       {% tf product/reserve-bay-terms.md %}
     </div>
     <div class="modal-footer">
-      <a href="http://citycarpark.my/apply/form_reserve.php" class="modal-action waves-effect waves-green btn-flat">Setuju</a>
+      <a href="http://mpjasin.citycarpark.my/apply/form_reserve.php" class="modal-action waves-effect waves-green btn-flat">Setuju</a>
       <a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat">Kembali</a>
     </div>
   </div>
