spellinggggggg and regression

--- a/operation/parking-rate.html
+++ b/operation/parking-rate.html
@@ -13,15 +13,15 @@ permalink_en: /operation/parking-rate.html
 
     <ul class="collapsible popout" data-collapsible="accordion">
       <li>
-        <div class="collapsible-header"><b>ZON A (PUSAT BANDAR) </b><small>PETAK KHAS</small></div>
+        <div class="collapsible-header"><b>{% t text.rate.h_rb %}</b></div>
         <div class="collapsible-body">{% tf operation/rate_zon_a.md %}</div>
       </li>
       <li>
-        <div class="collapsible-header"><b>KADAR PAS BERMUSIM</b></div>
+        <div class="collapsible-header"><b>{% t text.rate.h_dsp %}</b></div>
         <div class="collapsible-body">{% tf operation/rate_seasonal.md %}</div>
       </li>
       <li>
-        <div class="collapsible-header"><b>SEWAAN PETAK HARIAN</b></div>
+        <div class="collapsible-header"><b>{% t text.rate.h_dbr %}</b></div>
         <div class="collapsible-body">{% tf operation/rate_daily.md %}</div>
       </li>
     </ul>
