disbale cale season pass

--- a/product/season-pass.html
+++ b/product/season-pass.html
@@ -11,7 +11,7 @@ permalink_en: /product/season-pass.html
     <img src="/assets/images/product/laptop.png" class="responsive-img">
     <img src="{% t image_path.season_pass %}" class="responsive-img">
     <p>
-      <a class="btn-large btn-flat orange" href="#" onclick="calepermit();return false;">{% t menu.products.apply %}</a>
+      <!-- <a class="btn&#45;large btn&#45;flat orange" href="#" onclick="calepermit();return false;">{% t menu.products.apply %}</a> -->
     </p>
   </div>
   <div class="col m8">
